--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -4,9 +4,21 @@ html {
 }
 
 body {
-    margin-bottom: 40px; /* Margin bottom by footer height */
+    margin-bottom: 50px; /* Margin bottom by footer height */
     background-color: #272727;
     color: #FBFBFB;
+}
+
+.primary-text {
+    font-family: 'Lato', sans-serif;
+}
+
+.primary-color {
+    color: #F88A36;
+}
+
+.code-text {
+    font-family: 'Source Code Pro', monospace;
 }
 
 .container {
@@ -34,20 +46,6 @@ body {
     margin-top: 10px;
     width: 50px;
     height: 50px;
-}
-
-h2 {
-    font-family: 'Lato';
-    padding-top: 10px;
-    color: #F88A36;
-}
-
-p {
-    font-family: 'Lato';
-}
-
-.p-top-40 {
-    padding-top: 40px;
 }
 
 .m-20 {
