--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -23,7 +23,7 @@ body {
 
 .container {
     width: auto;
-    max-width: 680px;
+    max-width: 880px;
     padding: 0 15px;
 }
 
@@ -50,6 +50,26 @@ body {
 
 .m-20 {
     margin: 20px;
+}
+
+.code-window {
+    background-color: #282C34;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 200px;
+}
+
+.ns-logo {
+    position: relative;
+    top: -35px;
+    left: calc(50% - 31px);
+}
+
+#window-controls {
+    position: relative;
+    height: 12px;
+    left: 0px;
+    top: -10px;
+    left: -38px;
 }
 
 /* Grow from https://github.com/IanLunn/Hover/ */
