--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -1,3 +1,14 @@
+:root {
+  --main-bg-color: #313440;
+  --darker-bg-color: #262831;
+  --medium-bg-color: #282C34;
+  --grey-bg-color: #474A56;
+}
+
+.dark-bg {
+    background-color: var(--darker-bg-color);
+}
+
 html {
     position: relative;
     min-height: 100%;
@@ -5,8 +16,8 @@ html {
 
 body {
     margin-bottom: 50px; /* Margin bottom by footer height */
-    background-color: #272727;
-    color: #FBFBFB;
+    background-color: var(--main-bg-color);
+    color: #DBDFF4;
 }
 
 .primary-text {
@@ -15,6 +26,10 @@ body {
 
 .primary-color {
     color: #F88A36;
+}
+
+.darkest-bg {
+    background-color: #262831;
 }
 
 .code-text {
@@ -33,7 +48,7 @@ body {
     width: 100%;
     height: 40px; /* Set the fixed height of the footer here */
     line-height: 40px; /* Vertically center the text there */
-    background-color: #5D5E60;
+    background-color: #474A56;
     color: #FBFBFB;
 }
 
@@ -54,8 +69,9 @@ body {
 
 .code-window {
     background-color: #282C34;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    height: 200px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
+    height: 250px;
+    width: 100%;
 }
 
 .ns-logo {
@@ -67,9 +83,12 @@ body {
 #window-controls {
     position: relative;
     height: 12px;
-    left: 0px;
     top: -10px;
     left: -38px;
+}
+
+#description-strings {
+    text-align: center;
 }
 
 /* Grow from https://github.com/IanLunn/Hover/ */
