--- a/Public/styles/app.css
+++ b/Public/styles/app.css
@@ -38,15 +38,15 @@ body {
 .container {
     width: auto;
     max-width: 880px;
-    padding: 0 15px;
 }
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 40px; /* Set the fixed height of the footer here */
-    line-height: 40px; /* Vertically center the text there */
+.invisible {
+    visibility: hidden;
+}
+
+#footer {
+    padding-bottom: 20px;
+    height: 40px;
     background-color: #474A56;
     color: #FBFBFB;
 }
