--- a/Public/styles/projects.css
+++ b/Public/styles/projects.css
@@ -1,8 +1,8 @@
 .project-icon {
     width: auto;
     height: 80px;
-    position: relative;
-    top: -35px;
+    float: right;
+    margin-top: 10px;
 }
 
 .project-card {
@@ -10,16 +10,6 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
     height: auto;
     width: 100%;
-}
-
-.project-header {
-    position: relative;
-    top: -30px;
-}
-
-.project-text {
-    position: relative;
-    bottom: 0px;
 }
 
 /* Grow Shadow */
