--- a/Public/styles/projects.css
+++ b/Public/styles/projects.css
@@ -3,6 +3,7 @@
     height: 80px;
     float: right;
     margin-top: 10px;
+    margin-right: 8px;
 }
 
 .project-card {
@@ -28,4 +29,10 @@
     box-shadow: 0 8px 8px rgba(0, 0, 0, 0.25);
     -webkit-transform: scale(1.1);
     transform: scale(1.06);
+  }
+
+  div a, div a:hover {
+    color: inherit; /* blue colors for links too */
+    text-decoration: inherit; /* no underline */
+    height: auto;
   }
